Remove ugly linebreak. Fixed drama overlapping with banner.

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,16 @@ a {
     color: #55C;
 }
 
-h1, h2, h3 {
+h1, h3 {
+    text-align: center;
+    font-family: sans-serif;
+}
+
+h2 {
+    display: block;
+    margin-right: 10%;
+    margin-left: 10%;
+    display: block;
     text-align: center;
     font-family: sans-serif;
 }
